Refactoring and improving code.